@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX apache.webalizer 203 SHA256 9cc52c0cd26f7163388d9867f1d518abe9f0954389d64722222bece5d5adb56b SHA512 19145c1d74322f2f6724bde7c5ef0c0111489566ba3ba8dcdeba38681332250e77e26652ccc2b6ff1a41f7dc7795c34a4c5e189cf92b24fe0ad544c4afac40b0 WHIRLPOOL fc31cd0cb30112c5a4f7e969e1771e081e13f14ec01def10c20644b99cc2a1cfa6f68804c942e584fd2471da3cfb435ae5c4486d3321a3e84c1a8c74e420ed69
 AUX webalizer-2.21.02-gcc-4.4.patch 224 SHA256 a9d8c135c0094939656305b9cedb411985926720596e4a302f3f4e8bbabd7adf SHA512 0a080b761be849154734eb6bff5ad36f948ea3e79dc2ef694341a6e2516a246ca009cf943f25ab73ab4b36bde1095a4cb00fba66dbaf317e2f8924988759ad43 WHIRLPOOL 5821e32982f9105535036b768fa30eeb4a4c0c3ae64cbc0c705d4f83d571124ce6c51a955a76af9e24a86ee93fa8f0b39fedb5925f17b64236a58dff136411c2
 AUX webalizer-language-list.txt 1520 SHA256 9b946e766fdecccbbd480f520bd610afad78316aba4e7e0cea237da43039efd4 SHA512 52abca2565a8d06d8bf538b8c168b32dbb065e655a4c849d6ff1e1299c4e84d6f9717b7e74ef730a9c68cd63f2d03232ae5c9d1ba391f68e3f1314444e41c29a WHIRLPOOL 6a13c2336b59a6e7f693f3133b2e080fd9d135fd837eb1811677c982ec4f5b4d35fbdf55aa22079f814ce1d8d618ec09ff2a4f58a2947332ac0cee304757b4f1
@@ -6,7 +9,24 @@ DIST webalizer-2.23-05-RB29-patch.tar.gz 45853 SHA256 e212d1928315805b655bcb2614
 DIST webalizer-2.23-05-src.tar.bz2 308238 SHA256 afc88b8ee0927d9ed004962cb7e3d3054ef7628c7bc8a7b2e3ea1d758a47885a SHA512 4840c2ba25e34d5e276c724c311d2c2d7a0223dcbf6dec567960f56bc4cdfe4f6a1e412e3fcab53395d6357377f4f8d2b3bcc4b23c46a3ec6a895813a681cd4b WHIRLPOOL 82e092ae6e21e3bd3f70cd53a2dc6b71ed3903f640d7e4d2aa5be81ad43cf8aea54f0dd1d3fc02f55a615b1b9208ec339ccadcfa342737e61ebb0404f7fddfe1
 DIST webalizer-geodb-latest.tgz 639447 SHA256 f2a1bd7fcc9c93ed6a627bd15f2c31866d5a6c6b7dd48852d84a129386327218 SHA512 0f32d1249902e17f37cd0e7680004262bbe5b4a34a00d882319258c6aed80503e89ed192d8365731ab507fa54560082ae16c7023d0bc2232350709106be24117 WHIRLPOOL 26f1edf87ea6102c5047b41702fd273d40360bde7c481183a3303e2c89af3d6ba7470cd942d4af1574bed8822b776a26ea13c2388b7654fffccee856cc99e571
 DIST webalizer.conf.gz 8986 SHA256 b7da31865a8c13a66756247d68242d6478900f2c2b9b5698ed35c0c613fb9a71 SHA512 ec7f815e0215116d72e6d93b471a4b86a1c152a8ebae7c374144cabeeb06750d3a39fde65faf069e9aeb133f27b0b4cdee16bed5442e7fbd4eb4f45a4f3cd84b WHIRLPOOL 58c2ced08eeba65e1c7acf951e2e0e1806af58fcd37997c4d824504235303d7f75cf6c05c7ce051e2e2f3b3abff9a929f0dfd7722a995a8ab65232cfb549e83a
-EBUILD webalizer-2.21.02.ebuild 3306 SHA256 3e4b070169893ccfe4ebcfbcd7655ffce2f9e6f4824623c1d398110821a63fde SHA512 eec521e30a54c78ea82dc5659c70c3a12ba32f3536498460c14c34b010dc8aa4d4f2ef7b3ddfed38c75b2c5f21438d8404d3dbec956df940fda7809e7bce9f49 WHIRLPOOL 20fddb0fb553f7a9f96186d8127105441e12530d4724e678e97bf39b2b501a52c2441ab1b8f5ee81ec87e108d67e7052131887b266cb50f52e4dbaf64e34a57d
+EBUILD webalizer-2.21.02.ebuild 3270 SHA256 51f1b9fdf4d5556d0ddce769128f03539d8785c50149c9117afd9ef79516a4f0 SHA512 a4a152603a344aae62a35d78eae63fd1526e14a3e6ad3b7d86e6a7430d36b96977512aee210daa71c174ed92ef6428f877b37c35fb98cc770db625b2c9dbc3ac WHIRLPOOL 6d09af3f363fe1de4645f745cd012277aa3171857c4b165a118b22df3d92db6bcc356c4c9856e5f761829337a67711c858f3f5f6ae81048b454bef4b73bb4136
 EBUILD webalizer-2.23.05.ebuild 3969 SHA256 95bc9132b9ef862095d97b9a8cb61221dd850b7ed79cd718003199bd6ffefae3 SHA512 98bed3dbbefdc796faa4257137ff9b6b0d73cc506f9cc7877b63588d5890a63bad1afc7ee0be90361f705315b4045527b4ed466374926ad0fa550b3b48733bf5 WHIRLPOOL 9b1f6e94b7ea540a6d8792f92b56ad60fdf32953c56698307288a39dc2b65d9cf01037a5a51c467a2c8471a7868e6448dbdc26af975ff624547041f0c15fa099
-MISC ChangeLog 14495 SHA256 9371be47278965291b3dc34fdf2ab13885affbed395372df28da8e0e47e27121 SHA512 68eba5652295f0f7d0c81ef7b68c14e1f8cbf2d439d2e4f359cedcedea4b7e593ed48f91b57f898b23f38ce6e5dedf8888ff872c05670d346bb513638f781eb3 WHIRLPOOL 0c42c5b4cc90434c471731bd91c3ae7853a96130678759751acecbe3b57cb016743fa287efc2f2004ac773e060880f64668b266d2f900eb200398fb546c6fadb
+MISC ChangeLog 14619 SHA256 67f38bd3e13044aa878d15d5ab44cf3d001df32994f3230e16b8506c257bb01f SHA512 78aab50f2dc76caff98961a31997c18651851d4b1c46930df64c08651f369d56f32a54b08956686be0bf05c46924546b23261e7ad83c9aab9c73971e6129586e WHIRLPOOL d55934314bc4700bcfefff6eb0657f2bba6422c84e83b500f818a0aa6a7d78955fcaa90453c18b710fff8ce0dbb0d97ae91f4829668d47bb00b88e47a55dc93b
 MISC metadata.xml 233 SHA256 508e864fe9eca5b8405c2d52503c5a4ed3c432bac41391cdefb1c79ec57ce7b9 SHA512 2f782aa4f1643845da4aba216ae657a9c8b9cde830ef3ce15a3e6e964e2dcb8322ba2eab2c68f3906f53359ad0ffc810eb59fa024fd42f5e568643a6cb5837f6 WHIRLPOOL 869ea3360bf3837b2f51e116bc80f820cb3b8f4c618f9653a0b97968a3ceed6651d27db21f67d6f2911c0a3c1f2b51b84add27dedbcbefda222c8f84f12c151e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQ8sItAAoJEJOE+m71LUu6xgIQAK52kcGpTrVerJWmEL44FEA6
+YgNF4rwwJdzjfxxtQnroeZR/v3fLwA3loOg7CFtG7uIYiumsgmzOnjwrU7D9vs+d
+xbGbiQWoSD6CJPbLaoNp7KmZVC5IOsjjlY7LPeyGMWfe66dQf27mr7KkS4spui7d
+8R804j+udcHcDJ15i8UiOix0hwy+OdQb8l72efa0MLKeU2Uh84C0RLwdhR009obX
+YWegvurscQYpZ1cLaCiwE9dInB2LeeNO0AIpGtKQLG8F9kKF7+I16OszgBGIAJDq
+Uxwh/DiPdY51YG8Dfi//A9HgrNi8Wz74ZZqIWoVB1SNOogikM40ewR4o3BlzJ9Us
+3WVL74bHeWhSJKdamScAa216cTnBiY4OKCNByBU+MOxKRsjfc7VnHqYjcT6D6bVI
+Gn8IJnMW5p3iVwx/40I5nlUN7ctJPg2jNeardp8d84w70zwff43x3zwvldULcJA4
+dMSSmyv5LOuUv6LEnm8I/tgZkVXEniJVybKCHM9EBAvt4PmR3gyRvqfr65PP7wPF
+uobboF4W36geuafIJIksZD+P10PBZe9MlF/eIQbWO6a1REdaDpOrRn+UVL5iQo/g
+Z6ytE3huyFSn7c11vw2ILDABoppBajNrYj1yn/U7kJA+IRatdm9YlGwQbn7oE538
+ITUyp7WMXucccKYArxMF
+=32xw
+-----END PGP SIGNATURE-----
