@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/webalizer
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/webalizer/ChangeLog,v 1.98 2013/01/13 11:29:24 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/webalizer/ChangeLog,v 1.99 2013/01/13 14:18:16 blueness Exp $
+
+  13 Jan 2013; Anthony G. Basile <blueness@gentoo.org> webalizer-2.21.02.ebuild:
+  Drop all keywords but stable sparc
 
   13 Jan 2013; Agostino Sarubbo <ago@gentoo.org> webalizer-2.23.05.ebuild:
   Stable for x86, wrt bug #445226
